[package]
name = "wuwa-sig-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
interceptor-rs = { git = "https://git.xeondev.com/ReversedRoomsMisc/interceptor-rs.git" }
ilhook = "2.1.3"
crossterm = "0.29.0"
thiserror = "2.0.16"
windows = { version = "0.62.0", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Console",
] }

[dependencies.winapi]
version = "0.3.9"
features = [
    "minwindef",
    "ntdef",
    "consoleapi",
    "errhandlingapi",
    "libloaderapi",
    "memoryapi",
    "processthreadsapi",
    "psapi",
    "winnt"
]